--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,7 @@
     "cmake.buildBeforeRun": true,
     "cmake.buildTask": false,
     "cmake.cmakeCommunicationMode": "fileApi",
-    "cmake.configureOnOpen": true,
+    "cmake.configureOnOpen": false,
     "cmake.languageSupport.enableFileAPI": true,
     "cmake.launchBehavior": "newTerminal",
     "cmake.outputLogEncoding": "utf-8",
