new box layout bugfixes - seems to be working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,7 @@ target_compile_definitions(${PROJECT_NAME}
     ROGUELIKE_TESTS_ENABLED
 	SPDLOG_NO_EXCEPTIONS
 	SPDLOG_WCHAR_TO_UTF8_SUPPORT
+	GLM_ENABLE_EXPERIMENTAL=0
     KHRONOS_STATIC
 	NANOVG_GL3
     NOMINMAX
