i'm dumb. fixed memory leak from last commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -255,4 +255,5 @@ add_custom_command(TARGET ${PROJECT_NAME}
       $<TARGET_FILE_DIR:${PROJECT_NAME}>/shaders
 )
 
+include(ide-config)
 include(cmake-utils)
