refactored stb_truetype, a bit more size policy layout progress, enabled fpfast & AVX2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,6 +137,8 @@ target_compile_options(${PROJECT_NAME}
         /utf-8
         /EHsc
         /nologo
+        /arch:AVX2
+        /fp:fast
 
         $<$<CONFIG:Debug>:
 			# /fsanitize=fuzzer
