checkpointing local changes, still needs to be reviewed in detail

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,39 +1,41 @@
 {
     "C_Cpp.autoAddFileAssociations": false,
-    "C_Cpp.clang_format_style": "file",
+    "C_Cpp.autocomplete": "default",
+    "C_Cpp.autocompleteAddParentheses": false,
     "C_Cpp.clang_format_fallbackStyle": "none",
+    "C_Cpp.clang_format_style": "file",
+    "C_Cpp.codeAnalysis.clangTidy.enabled": true,
+    "C_Cpp.codeAnalysis.clangTidy.useBuildPath": true,
     "C_Cpp.codeAnalysis.runAutomatically": true,
-    "C_Cpp.commentContinuationPatterns": [
-        "/**",
-        "///"
-    ],
-    "problems.decorations.enabled": true,
-    "problems.visibility": true,
+    "C_Cpp.default.browse.limitSymbolsToIncludedHeaders": false,
     "C_Cpp.default.enableConfigurationSquiggles": true,
+    "C_Cpp.default.intelliSenseMode": "clang-x64",
     "C_Cpp.enhancedColorization": "enabled",
     "C_Cpp.formatting": "clangFormat",
-    "C_Cpp.autocompleteAddParentheses": false,
-    "editor.formatOnPaste": false,
-    "editor.formatOnType": false,
+    "C_Cpp.intelliSenseCacheSize": 5120,
+    "C_Cpp.intelliSenseEngine": "default",
+    "C_Cpp.workspaceParsingPriority": "high",
     "clang-format.language.cpp.enable": true,
     "clang-format.language.cpp.style": "file",
-    "clang-format.assumeFilename": ".clangformat",
-    "cppref.lang": "en",
-    "cppref.invertColorInDarkTheme": true,
-    "cppref.searchEngine": "Google",
-    "C_Cpp.workspaceParsingPriority": "high",
-    "cmake.automaticReconfigure": false,
+    "cmake.automaticReconfigure": true,
     "cmake.buildBeforeRun": true,
     "cmake.buildTask": false,
     "cmake.cmakeCommunicationMode": "fileApi",
     "cmake.configureOnOpen": false,
+    "cmake.enabledOutputParsers": [
+        "cmake",
+        "gcc",
+        "gnuld",
+        "msvc",
+        "ghs",
+        "diab"
+    ],
     "cmake.languageSupport.enableFileAPI": true,
     "cmake.launchBehavior": "newTerminal",
     "cmake.outputLogEncoding": "utf-8",
     "cmake.parallelJobs": 0,
-    "C_Cpp.default.cppStandard": "c++23",
+    "cmake.saveBeforeBuild": true,
     "cmake.useCMakePresets": "always",
-    "debug.autoExpandLazyVariables": true,
     "debug.console.closeOnEnd": true,
     "debug.console.fontFamily": "Fira Code Retina, Consolas, 'Courier New', monospace",
     "debug.console.fontSize": 12,
@@ -44,20 +46,8 @@
     "debug.showBreakpointsInOverviewRuler": true,
     "debug.terminal.clearBeforeReusing": false,
     "debug.toolBarLocation": "docked",
-    "terminal.integrated.tabs.focusMode": "singleClick",
-    "cmake.enabledOutputParsers": [
-        "cmake",
-        "gcc",
-        "gnuld",
-        "msvc",
-        "ghs",
-        "diab"
-    ],
-    "cmake.saveBeforeBuild": true,
-    "notebook.stickyScroll.enabled": true,
     "diffEditor.experimental.showMoves": true,
-    "diffEditor.experimental.useVersion2": true,
-    "docsView.documentationView.updateMode": "sticky",
+    "dotnet.defaultSolution": "disable",
     "editor.autoClosingBrackets": "beforeWhitespace",
     "editor.bracketPairColorization.enabled": false,
     "editor.codeLens": false,
@@ -68,13 +58,15 @@
     "editor.fontFamily": "Fira Code Retina, Consolas, 'Courier New', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 12,
+    "editor.formatOnPaste": false,
     "editor.formatOnSave": true,
     "editor.formatOnSaveMode": "file",
+    "editor.formatOnType": false,
     "editor.gotoLocation.alternativeDefinitionCommand": "editor.action.revealDeclaration",
     "editor.hover.delay": 500,
     "editor.maxTokenizationLineLength": 10000,
     "editor.minimap.enabled": false,
-    "editor.mouseWheelScrollSensitivity": 3,
+    "editor.mouseWheelScrollSensitivity": 5,
     "editor.mouseWheelZoom": true,
     "editor.quickSuggestionsDelay": 250,
     "editor.renderLineHighlight": "gutter",
@@ -89,8 +81,11 @@
     "git.autofetch": true,
     "git.confirmSync": false,
     "gitlens.plusFeatures.enabled": false,
-    "markdown-preview-enhanced.previewTheme": "one-dark.css",
+    "notebook.stickyScroll.enabled": true,
+    "output.smartScroll.enabled": false,
+    "problems.decorations.enabled": true,
     "problems.sortOrder": "position",
+    "problems.visibility": true,
     "search.maxResults": null,
     "search.showLineNumbers": true,
     "search.useIgnoreFiles": false,
@@ -112,16 +107,9 @@
         }
     },
     "terminal.integrated.scrollback": 100000,
+    "terminal.integrated.tabs.focusMode": "singleClick",
     "workbench.editor.highlightModifiedTabs": true,
     "workbench.editor.untitled.labelFormat": "name",
     "workbench.list.smoothScrolling": true,
-    "workbench.tree.renderIndentGuides": "always",
-    "dotnet.defaultSolution": "disable",
-    "prettyxml.settings.formatOnSave": false,
-    "prettyxml.settings.preserveWhiteSpacesInComment": true,
-    "prettyxml.settings.addSpaceBeforeSelfClosingTag": false,
-    "output.smartScroll.enabled": false,
-    "xml.format.maxLineWidth": 120,
-    "xml.format.enforceQuoteStyle": "preferred",
-    "xml.format.grammarAwareFormatting": true,
+    "workbench.tree.renderIndentGuides": "always"
 }
